--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
     tools:context="com.cqz.circleseekbardemo.MainActivity">
     <views.CircleSeekBar
         android:layout_width="200dp"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp"
+        />
 
 </RelativeLayout>
