--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +18,14 @@
         android:id="@+id/circle_seek_bar"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        app:arc_color="@color/colorAccent"
+        app:arc_width="32dp"
+        app:max_progress="100"
+        app:current_progress="0"
+        app:start_angle="135"
+        app:max_angle="270"
+        app:point_color="@color/colorPrimary"
+        app:point_radius="24dp"
         android:background="@android:color/holo_green_light"
         />
     <SeekBar
